fix: scrollbardesign

--- a/src/Styles/_scrollbar.scss
+++ b/src/Styles/_scrollbar.scss
@@ -1,46 +1,28 @@
+/* width */
+
 ::-webkit-scrollbar {
-    width: 0;
-}
-
-html {
-    scrollbar-width: none; // Firefox only
-}
-
-#scrollPath {
-    position: fixed;
-    top: 0;
-    right: 0;
     width: 10px;
-    height: 100%;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
     background: change_color($theme-color-secondary, $alpha: 0.2);
 }
 
-#scrollbar {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 10px;
-    background-color: $theme-color;
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: $theme-color;
+    box-shadow: 0 0 10px 10px lighten($color: $theme-color, $amount: 10%);
+    border-radius: 5px;
 }
 
-#scrollbar:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $theme-color;
-    filter: blur(10px);
-}
 
-#scrollbar:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $theme-color;
-    filter: blur(30px);
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: darken($color: $theme-color, $amount: 10%);
 }
